--- a/.github/workflows/packages-ci.yml
+++ b/.github/workflows/packages-ci.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Gradle
-      run: ./gradlew build
+      run: packages-definition/gradlew build
     - name: Run unit tests
-      run: ./gradlew test
+      run: packages-definition/gradlew test
         
