--- a/.github/workflows/packages-ci.yml
+++ b/.github/workflows/packages-ci.yml
@@ -13,6 +13,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Grant execute permission for gradlew
+      run: chmod +x packages-definition/gradlew
     - name: Build with Gradle
       run: packages-definition/gradlew build
     - name: Run unit tests
