--- a/.github/workflows/packages-ci.yml
+++ b/.github/workflows/packages-ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Build with Gradle
       uses: eskatos/gradle-command-action@v1
       with:
-        wrapper-directory: packages-definition/gradlew
+        wrapper-directory: packages-definition
         arguments: build
     - name: Run unit tests
       run: packages-definition/gradlew test
