--- a/.github/workflows/packages-ci.yml
+++ b/.github/workflows/packages-ci.yml
@@ -14,12 +14,11 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: chmod +x packages-definition/gradlew
+      run: chmod +x gradlew
     - name: Build with Gradle
       uses: eskatos/gradle-command-action@v1
       with:
-        wrapper-directory: /packages-definition
         arguments: build
     - name: Run unit tests
-      run: packages-definition/gradlew test
+      run: gradlew test
         
