--- a/.github/workflows/packages-ci.yml
+++ b/.github/workflows/packages-ci.yml
@@ -16,9 +16,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: build
+      run: gradlew build
     - name: Run unit tests
       run: gradlew test
         
