--- a/.github/workflows/packages-ci.yml
+++ b/.github/workflows/packages-ci.yml
@@ -15,8 +15,10 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Get gradle dependencies
+      run: ./gradlew dependencies || true
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew clean build -PdisablePreDex --stacktrace
     - name: Run unit tests
-      run: ./gradlew test
+      run: ./gradlew test --stacktrace
         
